data/derived/comb/progs/unify/prog7287.ml.out
Characters 66-67:
  List.fold_left f base xs
                 ^
Error: This expression has type int -> 'a -> int
       but an expression was expected of type
         ('b -> 'c -> 'd -> 'e -> 'f -> 'g) ->
         'h -> 'b -> 'c -> 'd -> 'e -> 'f -> 'g
       Type int is not compatible with type 'b -> 'c -> 'd -> 'e -> 'f -> 'g 
